@@ -23,10 +23,9 @@
 
 - Main TODO:
     - Re-work mark as read stuff
-    - Select following as composing a tweet
-    - quote tweets
+    - Select from following as composing a tweet
     - emoji support
     - night mode
-    - fix the back button functionality of the settings menu, it is all messed up
     - search hashtags and user from tweet activity (hyperlink)
     - Check the trim functions
+    - Attach from camera on compose activity
