@@ -14,18 +14,23 @@
           android:title="@string/menu_delete_tweet"
           android:showAsAction="never"  />
 
-    <item android:id="@+id/menu_copy_text"
+    <item android:id="@+id/menu_quote"
           android:orderInCategory="3"
+          android:title="@string/menu_quote"
+          android:showAsAction="never" />
+
+    <item android:id="@+id/menu_copy_text"
+          android:orderInCategory="4"
           android:title="@string/menu_copy_text"
           android:showAsAction="never"  />
 
     <item android:id="@+id/menu_open_web"
-          android:orderInCategory="4"
+          android:orderInCategory="5"
           android:title="@string/menu_open_web"
           android:showAsAction="never"  />
 
     <item android:id="@+id/menu_save_image"
-          android:orderInCategory="5"
+          android:orderInCategory="6"
           android:title="@string/menu_save_image"
           android:showAsAction="never"  />
 </menu>
